--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BM TECH SOLUTIONS - Image Gallery</title>
     <link rel ="stylesheet" href="styles.css">
+    <link rel="icon" href="Images/headshot.png" type="image/png">
+    <link rel="apple-touch-icon" href="Images/headshot.png">
 </head>
 <body>
     <div class="container">
@@ -312,7 +314,7 @@
                     <h3>Volunteer Team</h3>
                 </div>
             </div>
-
+0
             <div class="gallery-item" onclick="openLightbox(22)">
                 <img src="Images/volunteering2.jpg" alt="volunteering2">
                 <div class="overlay">
